@@ -13,9 +13,27 @@ INTRODUCTION
     requires an ANSI C compatible compiler (GCC works, as do
     most vendors' ANSI C compilers) and a "make" program.
 
-    Mini-XML was created to support the basic hierarchy provided
-    by XML and some simple data types, but doesn't do validation
-    or other types of processing on the data.
+    Mini-XML provides the following functionality:
+
+	- Reading and writing of UTF-8 encoded XML files.
+	- Data is stored in a linked-list tree structure,
+	  preserving the XML data hierarchy.
+	- Supports arbitrary element names, attributes, and
+	  attribute values with no preset limits, just available
+	  memory.
+	- Supports integer, real, opaque ("cdata"), and text
+	  data types in "leaf" nodes.
+	- Functions for creating and managing trees of data.
+	- "Find" and "walk" functions for easily locating and
+	  navigating trees of data.
+
+    Mini-XML doesn't do validation or other types of processing
+    on the data based upon schema files or other sources of
+    definition information, nor does it support character
+    entities other than those required by the XML
+    specification.  Also, since Mini-XML does not support the
+    UTF-16 encoding, it is technically not a conforming XML
+    consumer/client.
 
 
 BUILDING Mini-XML
@@ -86,7 +104,7 @@ DOCUMENTATION
         mxml_node_t *tree;
 
 	fp = fopen("filename.xml", "w");
-	mxmlSaveFile(tree, fp);
+	mxmlSaveFile(tree, fp, MXML_NO_CALLBACK);
 	fclose(fp);
 
     You can find a named element/node using the
